--- a/ventura_front/pubspec.yaml
+++ b/ventura_front/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   geolocator: ^11.0.0
   http: ^1.2.1
   provider: ^6.1.2
+  map_launcher: ^3.2.0
 
 dev_dependencies:
   flutter_test:
