--- a/ventura_front/pubspec.yaml
+++ b/ventura_front/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   http: ^1.2.1
   provider: ^6.1.2
   map_launcher: ^3.2.0
+  flutter_config: ^2.0.2
 
 dev_dependencies:
   flutter_test:
