Implementation of user connection with backend

--- a/ventura_front/android/app/src/main/AndroidManifest.xml
+++ b/ventura_front/android/app/src/main/AndroidManifest.xml
@@ -5,7 +5,9 @@
         android:label="ventura_front"
         android:name="${applicationName}"
         android:icon="@mipmap/launcher_icon"
-        android:enableOnBackInvokedCallback="true">
+        android:enableOnBackInvokedCallback="true"
+        android:usesCleartextTraffic="true"
+        >
         <activity
             android:name=".MainActivity"
             android:exported="true"
