Integration of changes related with issue #60

--- a/ventura_front/pubspec.yaml
+++ b/ventura_front/pubspec.yaml
@@ -11,7 +11,7 @@ dependencies:
   firebase_storage: ^11.6.10
   flutter:
     sdk: flutter 
-  shared_preferences: ^2.0.6
+  shared_preferences: ^2.2.3
   geolocator: ^11.0.0
   http: ^1.2.1
   provider: ^6.1.2
@@ -34,3 +34,4 @@ flutter:
   assets: 
     - lib/icons/
     - .env
+    - lib/data/initial-locations.json
