--- a/ventura_front/pubspec.yaml
+++ b/ventura_front/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   flutter_dotenv: ^5.1.0
   simple_progress_indicators: ^0.2.0
   url_launcher: ^6.0.0
+  proximity_sensor: ^1.3.1
 
 dev_dependencies:
   flutter_test:
