--- a/ventura_front/pubspec.yaml
+++ b/ventura_front/pubspec.yaml
@@ -20,6 +20,8 @@ dependencies:
   simple_progress_indicators: ^0.2.0
   url_launcher: ^6.0.0
   proximity_sensor: ^1.3.1
+  cached_network_image: ^3.0.0
+  flutter_cache_manager: ^3.0.0
 
 dev_dependencies:
   flutter_test:
