--- a/ventura_front/pubspec.yaml
+++ b/ventura_front/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   cached_network_image: ^3.0.0
   flutter_cache_manager: ^3.0.0
   firebase_core: ^2.31.0
+  image_picker: ^1.1.1
 
 dev_dependencies:
   flutter_test:
