--- a/ventura_front/pubspec.yaml
+++ b/ventura_front/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   flutter_cache_manager: ^3.0.0
   firebase_core: ^2.31.0
   image_picker: ^1.1.1
+  sqflite: ^2.3.3+1
 
 dev_dependencies:
   flutter_test:
