--- a/ventura_front/pubspec.yaml
+++ b/ventura_front/pubspec.yaml
@@ -25,6 +25,8 @@ dependencies:
   firebase_core: ^2.31.0
   image_picker: ^1.1.1
   sqflite: ^2.3.3+1
+  path: ^1.9.0
+  path_provider: ^2.1.3
 
 dev_dependencies:
   flutter_test:
