--- a/ventura_front/pubspec.yaml
+++ b/ventura_front/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   firebase_storage: ^11.6.10
   flutter:
     sdk: flutter 
+  connectivity_plus: ^2.3.0
   shared_preferences: ^2.2.3
   geolocator: ^11.0.0
   http: ^1.2.1
